# Latency-Arbitrage-Simulator

./: .gitignore  CMakeLists.txt  README.md  download_glad.py  setup.py
data/: exchanges.json
include/: arbitrage_scanner.h  colocation_optimizer.h  exchange.h  globe_renderer.h  historical_tracker.h  latency_calculator.h  network_graph.h  price_feed.h
shaders/: globe_fragment.glsl  line_fragment.glsl  line_vertex.glsl
src/: main.cpp
